# xmag

./: .gitignore  README.md  pyproject.toml
docs/: USER_GUIDE.md
docs/codex/: autolearning-framework.md  execplan-playwright-xmag.md  playwright-selector-notes.md  research-x-access-and-playwright.md  test-autonomy.md
src/xmag/: __init__.py  __main__.py  builder.py  cli.py  compiler.py  config.py  extractor.py  input.py  media.py  models.py  renderer.py
src/xmag/templates/: issue.tex.j2
tests/: test_compile_smoke.py  test_extractor_with_fixture_html.py  test_latex_escape.py  test_layout_config.py  test_tex_generation.py  test_url_parsing.py
tests/fixtures/: x_article_fixture.html
